feat: improve product search criteria and logo management (#450)
* feat: added new dynamic search criteria

* feat: improve product search criteria

* feat: improve product search criteria

* feat: tuning image uploading/removing logic

* feat: fix tests

* feat: fix tests
